# Agentic-AI-based-customer-support-assistant

./: .gitignore  README.md  frontend.py  graph.py  key.py  llm_setup.py  main.py  nodes.py  ollamaModel.py  pyproject.toml  rag_tools.py  redis_cache_manager.py  refund_tools.py  requirements.txt  run_frontend.py  settings.py  simple_ollama_setup.py  states.py  test_proposition_chunking.py  tools.py
data/: orders_database.json  processed_chunks.txt  semantic_chunks.txt
data/chroma_db/: chroma.sqlite3
data/chroma_db/6ee8e4e1-bff6-451c-a60d-5432942fa8dd/: index_metadata.pickle
data/semantic_vector_store/: chroma.sqlite3
documents/: company_config_json.json  support_tickets.csv
