[project]
name = "customerassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "beautifulsoup4>=4.12.0",
    "chromadb>=0.4.0",
    "email-validator>=2.2.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.116.1",
    "gradio>=4.0.0",
    "graphviz>=0.20.0",
    "groq>=0.4.0",
    "httpx>=0.28.1",
    "ipython>=8.0.0",
    "jinja2>=3.1.6",
    "jupyter>=1.0.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.3.17",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.0",
    "langchain-experimental>=0.0.50",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "langchain-redis>=0.2.3",
    "langgraph>=0.0.40",
    "markdown>=3.8.2",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "openpyxl>=3.1.5",
    "pandas>=1.5.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.7",
    "pydantic>=2.0.0",
    "pymupdf>=1.26.3",
    "pymupdf4llm>=0.0.27",
    "pypdf2>=3.0.0",
    "pytest>=7.0.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "redisvl>=0.2.5",
    "requests>=2.28.0",
    "sentence-transformers>=2.2.0",
    "smolagents[litellm,openai]>=1.20.0",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.5.0",
    "typing-extensions>=4.5.0",
]
